@@ -67,8 +67,3 @@
 
  - Ubuntu 10.10 init support
 	- https://sourceforge.net/tracker/?func=detail&atid=117457&aid=3166670&group_id=17457
-
- - API command to get command help
-	- https://www.virtualmin.com/node/17083
-	- CHANGELOG
-	- Cloudmin too
