@@ -78,7 +78,7 @@ print "Deletes a database associated with some virtual server.\n";
 print "\n";
 print "virtualmin delete-database --domain domain.name\n";
 print "                           --name database-name\n";
-print "                           --type [mysql|postgres]\n";
+print "                           --type mysql|postgres\n";
 exit(1);
 }
 
