@@ -367,8 +367,8 @@ print "virtualmin install-script --domain domain.name\n";
 print "                          --type name\n";
 print "                          --version number|\"latest\" [--unsupported]\n";
 print "                         [--path url-path]\n";
-print "                         [--db type name]\n";
-print "                         [--opt name value]\n";
+print "                         [--db \"type name\"]\n";
+print "                         [--opt \"name value\"]\n";
 print "                         [--upgrade id]\n";
 print "                         [--force-dir directory]\n";
 print "                         [--mongrels number]\n";
