@@ -132,8 +132,7 @@ print "$_[0]\n\n" if ($_[0]);
 print "Changes PHP variables for some or all domains.\n";
 print "\n";
 print "virtualmin modify-php-ini --domain name | --user name | --all-domains\n";
-print "                         [--php-version N]\n";
-print "                          --ini-name name --ini-value value\n";
-print "                         [--ini-name name --ini-value value]*\n";
+print "                         [--php-version number]\n";
+print "                         <--ini-name name>+ <--ini-value value>+\n";
 exit(1);
 }
