@@ -482,13 +482,13 @@ print "Changes web server settings for one or more domains.\n";
 print "\n";
 print "virtualmin modify-web --domain name | --all-domains\n";
 if ($supports_php) {
-	print "                     [--mode mod_php | cgi | fcgid]\n";
+	print "                     [--mode mod_php|cgi|fcgid]\n";
 	print "                     [--php-children number | --no-php-children]\n";
 	print "                     [--php-version num]\n";
 	print "                     [--php-timeout seconds | --no-php-timeout]\n";
 	}
 if ($supports_ruby) {
-	print "                     [--ruby-mode none | mod_ruby | cgi | fcgid]\n";
+	print "                     [--ruby-mode none|mod_ruby|cgi|fcgid]\n";
 	}
 print "                     [--suexec | --no-suexec]\n";
 print "                     [--proxy http://... | --no-proxy]\n";
